[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://font16.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/ZFTerminal/ZFTERMIN__.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/Settings/Settings.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 1.0
margin_right = 6.0
margin_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -60.0
margin_right = 70.0
margin_bottom = 60.0

[node name="StartBtn" type="Button" parent="VBoxContainer"]
margin_right = 140.0
margin_bottom = 25.0
focus_neighbour_top = NodePath("../QuitBtn")
focus_neighbour_bottom = NodePath("../SettingBtn")
custom_fonts/font = ExtResource( 2 )
text = "เริ่มเกม"

[node name="SettingBtn" type="Button" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 140.0
margin_bottom = 54.0
focus_neighbour_top = NodePath("../StartBtn")
focus_neighbour_bottom = NodePath("../CreditsBtn")
custom_fonts/font = ExtResource( 2 )
text = "ตั้งค่า"

[node name="CreditsBtn" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 140.0
margin_bottom = 83.0
focus_neighbour_top = NodePath("../SettingBtn")
focus_neighbour_bottom = NodePath("../QuitBtn")
custom_fonts/font = ExtResource( 2 )
text = "เครดิต"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 140.0
margin_bottom = 112.0
focus_neighbour_top = NodePath("../CreditsBtn")
focus_neighbour_bottom = NodePath("../StartBtn")
custom_fonts/font = ExtResource( 2 )
text = "ออก"

[node name="Settings" parent="." instance=ExtResource( 4 )]

[node name="FullScreen_CheckButton" parent="Settings/VBoxContainer" index="6"]
custom_fonts/font = SubResource( 1 )

[node name="BackBtn" parent="Settings/VBoxContainer" index="7"]
custom_fonts/font = SubResource( 1 )

[connection signal="pressed" from="VBoxContainer/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingBtn" to="." method="_on_SettingBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsBtn" to="." method="_on_CreditsBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]

[editable path="Settings"]
